--- a/01-document-create-element.html
+++ b/01-document-create-element.html
@@ -1,9 +1,10 @@
 <body>
   <div id="root"></div>
+  <h1>My React Project</h1>
   <script type="text/javascript">
     const rootElement = document.getElementById('root')
     const element = document.createElement('div')
-    element.textContent = 'Hello World'
+    element.textContent = 'Hello Worlds'
     element.className = 'container'
     rootElement.appendChild(element)
   </script>
